# rl4greencrab

./: .gitignore  =8  README.md  nohup.out  pyproject.toml
clustering/: centroids.csv  clustering.ipynb
data/: const_agent_simulations.csv  constant_actions_result.csv
discretization/: Optimal_Bins.ipynb  Simplified_Policies.ipynb  clustering.ipynb  lgb_metrics.csv  optimal_bins.csv  optimal_bins.json  optimal_bins_new.json
figures/: Figure1_conceptual.ai
hyperpars/: gcse-boilerplate.yml  ppo-gcmnorm-time.yml  ppo-gcmnorm.yml  ppo-gcmsimplenorm.yml  ppo-gcmsizenorm.yml  ppo-gcse.yml  ppo-greencrab-ts-v2-1.yml  ppo-greencrab-v0-1.yml  ppo-simple.yml  ppo-twoactnorm.yml  rppo-gcmsimplenorm.yml  rppo-gcse.yml  rppo-twoactnorm.yml  td3-gcmsimplenorm.yml  td3-gcmsizenorm.yml  td3-gcse.yml  td3-simple.yml  td3-twoactnorm.yml  tqc-gcmsimplenorm.yml  tqc-gcmsizenorm.yml  tqc-gcse.yml  tqc-greencrab-ts-v2-1.yml  tqc-greencrab-v0-1.yml  tqc-simple.yml  tqc-twoactnorm.yml
notebooks/: .gitignore  LipschitzPPO.py  LipschitzPPO_gcmemoving_0.1_0.5  LipschitzPPO_gcmenorm_0.001_50  PPO_test.ipynb  PPO_testing.ipynb  RL_train.ipynb  TD3_testing.ipynb  Three_Act_Env_Data.ipynb  Untitled.ipynb  Untitled.py  attention_net_train.ipynb  const_action.ipynb  constant_action.ipynb  constant_actions.ipynb  gaussian_smoother.ipynb  heatmaps.ipynb  hugging_face.ipynb  huggingface.ipynb  intro-1.ipynb  intro-2-Copy1.ipynb  intro-2.ipynb  intro.ipynb  intro_pt1.ipynb  intro_pt1_fromGit.ipynb  intro_pt2-Copy1.ipynb  intro_pt2-Copy1.py  intro_pt2-Model_testing.ipynb  intro_pt2.ipynb  intro_pt2_git.ipynb  model_compare.ipynb  month_env_intro.ipynb  month_env_test.ipynb  month_env_time_series.ipynb  nohup.out  plots.ipynb  pop_plot.ipynb  ppo1000_GPP.csv.xz  rews_df.csv  sample_params.py  (+9 more)
scripts/: LSTM_train.py  attention_net.py  create_data.py  nohup.out  plot_script.py  plot_scripts_example.py  train.py  train_algos.sh  train_all.sh  train_benchmarks.sh  train_gcse_manual.py  train_metaenv.py  train_v2.py
(+134 files in other folders)
